[package]
name = "expression"
version = "0.1.0"
authors = ["James Waples <jamwaffles@gmail.com>"]
edition = "2018"
[[bench]]
harness = false
name = "evaluate_expression"

[dependencies]
nom = "4.1.1"
gcode-parser = { path = "../gcode-parser" }

[dev-dependencies]
criterion = "0.2.7"
maplit = "1.0.1"
