[package]
name = "expression"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"
[[bench]]
harness = false
name = "evaluate_expression"

[dependencies]
nom = { version = "5.0.1", default_features = false, features = [ "std" ] }
num-traits = "0.2.8"

[dev-dependencies]
criterion = "0.3.0"
maplit = "1.0.2"
