[package]
name = "gcode-parser"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"
[[bench]]
name = "programs"
harness = false
[[bench]]
name = "linuxcnc"
harness = false
[[bench]]
name = "tinyg"
harness = false
[[bench]]
name = "universal_gcode_sender"
harness = false
[[bench]]
name = "tokens"
harness = false
[[bench]]
name = "huge"
harness = false

[dependencies]
nom = "4.1.1"
nom_locate = { version = "0.3.1", features = [ "verbose-errors" ] }
expression = { path = "../expression" }
common = { path = "../common" }

[dev-dependencies]
criterion = "0.2.7"

[build-dependencies]
glob = "0.2.11"
