[package]
name = "gcode-parser"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"
[[bench]]
name = "programs"
harness = false
[[bench]]
name = "linuxcnc"
harness = false
[[bench]]
name = "tinyg"
harness = false
[[bench]]
name = "universal_gcode_sender"
harness = false
[[bench]]
name = "tokens"
harness = false
[[bench]]
name = "huge"
harness = false
[[bench]]
name = "parsers"
harness = false

[lib]
bench = false

[dependencies]
nom = { version = "5.0.0", default_features = false, features = [ "std" ] }
expression = { path = "../expression" }
common = { path = "../common" }

[dev-dependencies]
criterion = "0.2.11"

[build-dependencies]
glob = "0.3.0"
