[package]
name = "trajectory-planner"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"

[dependencies]
trajectories = { git = "https://github.com/jamwaffles/trajectories.git", rev = "ae68196610df75fa175124685a6d66d695f3c5d9" }
gcode-parser = { path = "../gcode-parser" }
nalgebra = "0.17.0"
