[package]
name = "trajectory-planner"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"

[dependencies]
gcode-parser = { path = "../gcode-parser" }
nalgebra = "0.17.0"
trajectories = { git = "https://github.com/jamwaffles/trajectories.git" }
# trajectories = { path = "../../trajectories/trajectories" }

[dev-dependencies]
pretty_env_logger = "0.3.0"

[dependencies.cpuprofiler]
optional = true
version = "0.0.3"

[features]
default = []
profile = ["cpuprofiler"]
